# pyobd

./: .gitignore  README.md  flake.nix  pyproject.toml
pyobd/: __init__.py  __main__.py  obd2_codes.py  obd_io.py  obd_sensors.py  pyobd.py
pyobd/obd/protocols/: protocol.py  protocol_can.py  protocol_legacy.py
